@@ -1,55 +1,56 @@
 package dev.config;
 
-
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.filter.OncePerRequestFilter;
 
+import javax.crypto.SecretKey;
 import javax.servlet.FilterChain;
 import javax.servlet.ServletException;
+import javax.servlet.http.Cookie;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-@Configuration
 public class JWTAuthorizationFilter extends OncePerRequestFilter {
-    @Value("${jwt.cookie}")
-    private String TOKEN_COOKIE;
-    @Value("${jwt.secret}")
-    private String SECRET;
-    @Override
-    protected void doFilterInternal(HttpServletRequest req, HttpServletResponse res,
-                                    FilterChain chain) throws IOException, ServletException {
-        // Recherche du jeton par Cookie
-        if(req.getCookies() != null) {
-            Stream.of(req.getCookies()).filter(cookie -> cookie.getName().equals
-                            (TOKEN_COOKIE))
-                    .map(cookie -> cookie.getValue())
-                    .forEach(token -> {
 
-                        Claims body = Jwts.parser().setSigningKey(SECRET).parseClaimsJws(token
-                        ).getBody();
+    @Value("AUTH-TOKEN")
+    private String TOKEN_COOKIE;
+
+    private SecretKey secretKey;
+
+    public JWTAuthorizationFilter(SecretKey secretKey) {
+        this.secretKey = secretKey;
+    }
+
+
+    @Override
+    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
+        if(request.getCookies() != null) {
+            Stream.of(request.getCookies())
+                    .filter(cookie -> cookie.getName().equals(TOKEN_COOKIE))
+                    .map(Cookie::getValue)
+                    .forEach(token -> {
+                        Claims body = Jwts.parserBuilder().setSigningKey(secretKey).build().parseClaimsJws(token).getBody();
+
                         String username = body.getSubject();
+
                         List<String> roles = body.get("roles", List.class);
+
                         List<SimpleGrantedAuthority> authorities = roles
                                 .stream()
-                                .map(SimpleGrantedAuthority::new)
-                                .collect(Collectors.toList());
-                        Authentication authentication = new UsernamePasswordAuthenticationToken
-                                (username, null, authorities);
+                                .map(SimpleGrantedAuthority::new).toList();
+                        Authentication authentication = new UsernamePasswordAuthenticationToken(username, null, authorities);
                         SecurityContextHolder.getContext().setAuthentication(authentication);
                     });
         }
-        chain.doFilter(req, res);
+        filterChain.doFilter(request, response);
     }
-
 }
